# fair-workflow

./: .pre-commit-config.yaml  404.html  CITATION.cff  LICENSE.txt  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: publish.yml  test.yml
development/: index.html
docs/: Api.md  development.md  fair_workflow.md  index.md  usage.md
fair_workflow/: index.html
search/: search_index.json
src/fair_workflow/: __init__.py  __main__.py  fair_workflow.py  namespaces.py
tests/: __init__.py  dev.py  test_fair_workflow.py
usage/: index.html
