[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
requires-python = ">=3.7"
name = "fair-workflow"
description = "A package to describe workflow using semantic technologies."
readme = "README.md"
license = { file = "LICENSE.txt" }
authors = [
    { name = "Remzi Celebi", email = "remzi.celebi@maastrichtuniversity.nl" },
    { name = "Vincent Emonet", email = "vincent.emonet@gmail.com" },
]
maintainers = [
    { name = "Remzi Celebi", email = "remzi.celebi@maastrichtuniversity.nl" },
    { name = "Vincent Emonet", email = "vincent.emonet@gmail.com" },
]
keywords = [
    "Python",
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dynamic = ["version"]

dependencies = [
    "networkx",
    "matplotlib",
    "rdflib >=6.0.0",
    "GitPython",
    "typer >=0.6.0",
]


[project.scripts]
fair-workflow = "fair_workflow.__main__:cli"


[project.optional-dependencies]
test = [
    "pytest >=7.1.3",
    "pytest-cov >=3.0.0",
    "ruff >=0.0.219",
    "mypy >=0.991",
    "black >= 22.8.0",
]
doc = [
    "mkdocs >=1.4.2",
    "mkdocs-material >=8.2.7",
    "mkdocstrings[python] >=0.19.1",
    "mdx-include >=1.4.1",
    "mkdocs-markdownextradata-plugin >=0.2.5",
]
dev = [
    "pre-commit >=2.17.0",
    "scikit-learn",
    "pandas",
]


[project.urls]
Homepage = "https://github.com/MaastrichtU-IDS/fair-workflow"
Documentation = "https://github.com/MaastrichtU-IDS/fair-workflow"
History = "https://github.com/MaastrichtU-IDS/fair-workflow/releases"
Tracker = "https://github.com/MaastrichtU-IDS/fair-workflow/issues"
Source = "https://github.com/MaastrichtU-IDS/fair-workflow"


# ENVIRONMENTS AND SCRIPTS
[tool.hatch.envs.default]
features = [
    "test",
    "dev",
    "doc",
]
post-install-commands = [
    "pre-commit install",
]

[tool.hatch.envs.default.scripts]
test = "pytest {args}"
cov = "test --cov src {args}"
dev = "python tests/dev.py {args}"
fmt = [
    "black src tests",
    "ruff src tests --fix",
]
check = [
    "ruff src tests",
    "black src tests --check",
    "mypy src",
]
all = [
    "format",
    "check",
    "cov",
]
docs = "mkdocs serve -a localhost:8001"


# TOOLS
[tool.hatch.version]
path = "src/fair_workflow/__init__.py"


[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
omit = ["tests/*"]


[tool.mypy]
strict = true
implicit_reexport = true
follow_imports = "normal"
ignore_missing_imports = true
pretty = true
show_column_numbers = true
warn_no_return = true
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_any_generics = true


[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning:httpx.*:"
]


[tool.black]
color = true
line-length = 120
target-version = ['py37']
skip-string-normalization = false


# https://github.com/charliermarsh/ruff#supported-rules
[tool.ruff]
src = ["src", "tests"]
target-version = "py37"
line-length = 120
select = [
    "A",
    "B",   # flake8-bugbear
    "C",   # flake8-comprehensions
    "E",   # pycodestyle errors
    "F",   # pyflakes
    # "FBT", # flake8-boolean-trap
    "I",   # isort
    "ICN",
    "N",
    "PLC",
    "PLE",
    "PLR",
    "PLW",
    "Q",
    "RUF",
    "S",
    "SIM",
    "T",
    "TID",
    "UP",
    "W",  # pycodestyle warnings
    "YTT",
]
ignore = [
    "E501", # line too long
    "B008", # do not perform function calls in argument defaults
    "B006", # do not use mutable data structures for argument defaults
    "C901", # too complex
    "S101", # Use of `assert` detected
    "T201", "T203", # remove print and pprint
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["I", "F401"] # module imported but unused
